<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/bt5"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/bt8"
        app:layout_constraintStart_toEndOf="@+id/bt4" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintStart_toEndOf="@+id/bt8" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintStart_toEndOf="@+id/bt7" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/bt9"
        app:layout_constraintStart_toEndOf="@+id/bt5" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="72dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/bt5"
        app:layout_constraintStart_toEndOf="@+id/bt1" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/bt4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/bt6"
        app:layout_constraintStart_toEndOf="@+id/bt2" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/bt7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ResultBox"
        android:layout_width="188dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:hint="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondNumber" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="208dp"
        android:text="/"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/multiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subButton" />

    <TextView
        android:id="@+id/FirstNumber"
        android:layout_width="229dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/number1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SecondNumber"
        android:layout_width="233dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/number2"
        android:text="@string/_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNumber" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/bt2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>